--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./img/z3223840831225_40564b75f9eb147a2c10803c4840bf61.jpg" alt="">
         </div>
         <h2>Bao Ngan</h2>
-        <p>Fullstack Developer</p>
+        <p>Bò Điên</p>
         <div class="card__social">
             <a href="https://www.facebook.com/bao.ngan.52493">
                 <i class="fa-brands fa-facebook-f"></i>
