--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="./img/z3223840831225_40564b75f9eb147a2c10803c4840bf61.jpg" alt="">
         </div>
         <h2>Bao Ngan</h2>
-        <p>Bò Điên</p>
+        <p>Business Analyst</p>
         <div class="card__social">
             <a href="https://www.facebook.com/bao.ngan.52493">
                 <i class="fa-brands fa-facebook-f"></i>
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Card__Profile -->
-    <div class="card">
+    <!-- <div class="card">
         <div class="card__img">
             <img src="./img/274668999_1296156247544907_5308069561457739509_n.jpg" alt="">
         </div>
@@ -57,6 +57,6 @@
             </a>
         </div>
         <button>Contact Me</button>
-    </div>
+    </div> -->
 </body>
 </html>
