Phuc up lai code

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
 
     <!-- Card__Profile -->
-    <!-- <div class="card">
+    <div class="card">
         <div class="card__img">
             <img src="./img/274668999_1296156247544907_5308069561457739509_n.jpg" alt="">
         </div>
@@ -57,6 +57,6 @@
             </a>
         </div>
         <button>Contact Me</button>
-    </div> -->
+    </div>
 </body>
 </html>
